--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
     "name": "minecraft-java-core",
-    "version": "4.2.4",
+    "version": "4.2.5",
     "types": "./build/Index.d.ts",
     "exports": {
         ".": {
-            "import": "./build/esm/index.js",
-            "require": "./build/index.js",
-            "types": "./build/index.d.ts"
+            "import": "./build/esm/Index.js",
+            "require": "./build/Index.js",
+            "types": "./build/Index.d.ts"
         }
     },
     "description": "A library starting minecraft game NW.js and Electron.js",
